--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente libero numquam mollitia suscipit odio amet pariatur id ea? Quia, esse.</p>
 </body>
 </html>
