--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente libero numquam mollitia suscipit odio amet pariatur id ea? Quia, esse.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, suscipit!</p>
 </body>
 </html>
