--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,5 +8,7 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente libero numquam mollitia suscipit odio amet pariatur id ea? Quia, esse.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, suscipit!</p>
+
+    <h1>Hello</h1>
 </body>
 </html>
