--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,5 +16,6 @@
     <h1>Hello</h1>
     <h1>Hello</h1>
     <h1>Hello</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa obcaecati itaque corporis similique vitae dolorum facilis eveniet aliquid quia! Doloribus?</p>
 </body>
 </html>
