--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente libero numquam mollitia suscipit odio amet pariatur id ea? Quia, esse.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, suscipit!</p>
-
-    <h1>Hello</h1>
-    <h1>Hello</h1>
-    <h1>Hello</h1>
-    <h1>Hello</h1>
-    <h1>Hello</h1>
-    <h1>Hello</h1>
-    <h1>Hello</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa obcaecati itaque corporis similique vitae dolorum facilis eveniet aliquid quia! Doloribus?</p>
-    <h1>This is finel</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
